# Rubik

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Constant.h  Cube.cpp  Cube.h  Face.cpp  Face.h  Help.cpp  Help.h  Image.cpp  Image.h  Point3D.cpp  Point3D.h  README.md  Rubik.cpp  Rubik.dev  Rubik.h  Vector3D.cpp  Vector3D.h  main.cpp
